<resources>
    <string name="app_name">NotesApp</string>
    <string name="list_title">Notes</string>
    <string name="content_description_add">add</string>
    <string name="button_create">create</string>
    <string name="title_note">Input note</string>
    <string name="update_note">Update note</string>
    <string name="button_save">save</string>
    <string name="delete_button">delete</string>
    <string name="category_work">Work</string>
    <string name="category_study">Study</string>
    <string name="category_personal">Personal</string>
    <string name="category_sport">Sport</string>
    <string name="category_family">Family</string>
    <string name="no_category">No category</string>
    <string name="hint_title">Title</string>
    <string name="update_time_and_letter_count">%1$s | %2$d</string>
    <string name="login_title">Login</string>
    <string name="login_button">Login</string>
    <string name="to_login_button">To login</string>
    <string name="registration_button">Registration</string>
    <string name="to_registration_button">To registration</string>
    <string name="password_hint">Password</string>
    <string name="login_hint">Login</string>
    <string name="registration_title">Registration</string>
    <string name="main_title">Notepad+-</string>
    <string name="content_description_logout">logout</string>
    <string name="content_description_sync">sync</string>
</resources>