<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Base.Theme.NotesApp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="125dp"
        android:layout_height="60dp" >

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/icon" />

        <TextView
            android:id="@+id/LoginTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_title"
            android:fontFamily="@font/font"
            android:gravity="center|start"
            android:paddingEnd="5dp"
            android:paddingStart="21dp"
            android:paddingBottom="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/loginEditText"
        style="@style/Base.Theme.NotesApp.CommonItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/login_hint" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordEditText"
        style="@style/Base.Theme.NotesApp.CommonItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/password_hint" />

    <Button
        android:id="@+id/loginButton"
        style="@style/Base.Theme.NotesApp.CommonButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:enabled="false"
        android:text="@string/login_button" />

    <Button
        android:id="@+id/goToRegistrationButton"
        style="@style/Base.Theme.NotesApp.CommonButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/to_registration_button" />

</LinearLayout>