<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/editNoteRootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/detailsNoteTitleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_weight="1"
        style="@style/TextAppearance.AppCompat.Large"
        android:text="@string/update_note"/>

    <Button
        android:id="@+id/deleteNoteButton"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_button"
        app:layout_constraintTop_toBottomOf="@id/detailsNoteTitleTextView"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/noteTitleEditText"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/deleteNoteButton"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/noteTextEditText"
        android:gravity="top"
        android:scrollbars="vertical"
        android:layout_margin="8dp"
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/noteTitleEditText"
        app:layout_constraintBottom_toTopOf="@id/saveNoteButton"/>

    <Button
        android:id="@+id/saveNoteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/button_save"
        />

</androidx.constraintlayout.widget.ConstraintLayout>